--- a/vignettes/test_wf.Rmd
+++ b/vignettes/test_wf.Rmd
@@ -10,8 +10,6 @@ output: html_document
 Load packages and custom functions
 
 ```{r setup}
-#BiocManager::install("Cardinal")
-BiocManager::install("chemCal")
 library(Cardinal)
 library(dplyr)
 library(chemCal)
@@ -93,37 +91,43 @@ Select ROIs in each sample
 
 ## Select cal levels
 ```{r set_cal_mixes}
-image(cal_mix)
+image(cal_mix, mz = mz(cal_mix)[1])
 cal_mix@featureData@mz
 
 # Set cal levels
-cal1 <- selectROI(cal_mix, mz = 287.4, contrast.enhance="histogram")
+cal1 <- selectROI(cal_mix, mz = mz(cal_mix)[1], contrast.enhance="histogram")
 image(cal_mix, cal1~x*y, key=T)
 
-cal2 <- selectROI(cal_mix, mz = 287.4, contrast.enhance="histogram")
+cal2 <- selectROI(cal_mix, mz = mz(cal_mix)[1], contrast.enhance="histogram")
 image(cal_mix, cal2~x*y, key=T)
 
-cal3 <- selectROI(cal_mix, mz = 287.4, contrast.enhance="histogram")
+cal3 <- selectROI(cal_mix, mz = mz(cal_mix)[1], contrast.enhance="histogram")
 image(cal_mix, cal3~x*y, key=T)
 
-cal4 <- selectROI(cal_mix, mz = 287.4, contrast.enhance="histogram")
+cal4 <- selectROI(cal_mix, mz = mz(cal_mix)[1], contrast.enhance="histogram")
 image(cal_mix, cal4~x*y, key=T)
 
-cal5 <- selectROI(cal_mix, mz = 287.4, contrast.enhance="histogram")
+cal5 <- selectROI(cal_mix, mz = mz(cal_mix)[2], contrast.enhance="histogram")
 image(cal_mix, cal5~x*y, key=T)
 
-cal6 <- selectROI(cal_mix, mz = 287.4, contrast.enhance="histogram")
+cal6 <- selectROI(cal_mix, mz = mz(cal_mix)[2], contrast.enhance="histogram")
 image(cal_mix, cal6~x*y, key=T)
 
+# Away from cal mix for standard addition - background
+cal7 <- selectROI(cal_mix, mz = mz(cal_mix)[1], contrast.enhance="histogram")
+image(cal_mix, cal7~x*y, key=T)
+
 cal_levels = makeFactor(L1 = cal1, L2 = cal2, L3 = cal3,
-           L4 = cal4, L5 = cal5, L6 = cal6)
+           L4 = cal4, L5 = cal5, L6 = cal6, L7 = cal7)
 
 pData(cal_mix)$sample_type = "Cal"
 pData(cal_mix)$replicate = "01"
 pData(cal_mix)$ROI = cal_levels
+pData(cal_mix)$sample_ID = sprintf("%s_%s_%s", pData(cal_mix)$sample_type, pData(cal_mix)$replicate, pData(cal_mix)$ROI)
 pData(cal_mix)
 
 image(cal_mix, mz = mz(cal_mix)[2], subset=cal1)
+image(cal_mix, mz = mz(cal_mix)[2], contrast.enhance="histogram")
 
 ```
 
@@ -139,6 +143,8 @@ tissue = tissue[, tissue_pixels]
 
 image(tissue, mz = mz(tissue)[1], contrast.enhance="histogram",
       superpose = FALSE, normalize.image = "linear")
+image(tissue, mz = mz(tissue)[1], contrast.enhance="histogram",
+      superpose = FALSE)
 
 ```
 
@@ -169,6 +175,7 @@ tissue_rois = makeFactor(roi1 = tissue_roi1, roi2 = tissue_roi2, roi3 = tissue_r
 pData(tissue)$sample_type = "Tissue"
 pData(tissue)$replicate = "01"
 pData(tissue)$ROI = tissue_rois
+pData(tissue)$sample_ID = sprintf("%s_rep%s_%s", pData(tissue)$sample_type, pData(tissue)$replicate, pData(tissue)$ROI)
 pData(tissue)
 ```
 
@@ -205,7 +212,7 @@ msi_response = int2response(MSIobject = msi_combined)
 spectra(msi_response)[1, 14000]
 spectra(msi_response)[1, 14]
 
-image(cal_response, subset=cal1)
+image(msi_response, mz = mz(msi_response)[1], subset=cal1)
 
 ```
 
@@ -215,7 +222,7 @@ image(cal_response, subset=cal1)
 ## Mean ion intensity (per pixel) for each calibration level
 ```{r mean_cal_int}
 mean_resp_cal = summarise_cal_levels(MSIobject = msi_response,
-                     cal_label = "Calibration")
+                                     cal_label = "Cal")
 
 ```
 
@@ -227,7 +234,7 @@ Standard addition
 ```{r create_cals}
 
 # Read in as csv???
-concs = c(10, 1, 0.1, 0.01, 0.001, 0.0001)
+concs = c(10, 1, 0.1, 0.01, 0.001, 0.0001, 0)
 
 cal_metadata = data.frame(sample=colnames(mean_resp_cal),
                           conc = NA) %>%
@@ -237,32 +244,20 @@ cal_metadata = data.frame(sample=colnames(mean_resp_cal),
          conc = ifelse(level=="L3", concs[3], conc),
          conc = ifelse(level=="L4", concs[4], conc),
          conc = ifelse(level=="L5", concs[5], conc),
-         conc = ifelse(level=="L6", concs[6], conc))
+         conc = ifelse(level=="L6", concs[6], conc),
+         conc = ifelse(level=="L7", concs[7], conc))
 
-cal_list = list()
-for(i in 1:nrow(mean_resp_cal)){
-  mz = as.character(rownames(mean_resp_cal)[i])
-  print(mz)
-  
-  ints = mean_resp_cal[i,]
-  if(sum(!is.na(ints)) > 2){
-    
-    temp_df = data.frame(int = as.numeric(ints),
-           sample = colnames(mean_resp_cal)) %>%
-      mutate(conc = cal_metadata$conc[which(cal_metadata$sample == sample)])
-    
-    cal_list[[mz]] = lm(int~conc, data = temp_df)
-  } else{
-    cal_list[[mz]] = "NO DATA"
-  }
-}
+cal_list = create_cal_curve(response_matrix = mean_resp_cal,
+                            cal_metadata = cal_metadata,
+                            cal_type = "std_addition")
+
 ```
 
 
 ## Quantify tissue concentrations using calibration curves
 ```{r quant}
 tissue_concs = int2conc(MSIobject = msi_response,
-                        cal_label = "Calibration",
+                        cal_label = "Cal",
                         cal_list = cal_list)
 
 image(tissue_concs, mz = mz(tissue_concs), contrast.enhance="histogram",
@@ -293,5 +288,7 @@ feature_metadata = df[[3]]
 ## Univariate stats
 
 ## Multivariate stats
+Take all pixels and sample from there?
+- But select MANY ROIs linked to cells. So probably not?
 
 
