--- a/vignettes/test_wf.Rmd
+++ b/vignettes/test_wf.Rmd
@@ -23,8 +23,8 @@ library(chemCal)
 # Set paths
 base_path = "C:/Users/matsmi/OneDrive - Karolinska Institutet/Dokument/MSI/quant_MSImageR"
 #base_path = "C:MSI/quant_MSImageR"
-imzl_path = "C:/Users/matsmi/OneDrive - Karolinska Institutet/Dokument/MSI/quant_MSImageR/data" 
-#imzl_path = "C:MSI/quant_MSImageR/data"
+data_path = "C:/Users/matsmi/OneDrive - Karolinska Institutet/Dokument/MSI/quant_MSImageR/data" 
+#data_path = "C:MSI/quant_MSImageR/data"
 out_path = "C:/Users/matsmi/OneDrive - Karolinska Institutet/Dokument/MSI/quant_MSImageR/results"
 #out_path = "C:MSI/quant_MSImageR/results"
 
@@ -40,9 +40,9 @@ Read imzML mass spectrometry imaging data files into R, using Cardinal package a
 ```{r, message=FALSE}
 
 cal_mix = Cardinal::readImzML(name = "2021_05_26_6_mix_dil_slide-01_02_50um_pos_1", 
-                              folder = imzl_path)
+                              folder = data_path)
 tissue = Cardinal::readImzML(name = "2120_05_27_Cassettedosed_Liver_2Hrs_MRM01_1",
-                             folder = imzl_path)
+                             folder = data_path)
 
 ```
 
@@ -55,7 +55,7 @@ Set a common m/z axis for each data file, to enable merging of the data downstre
 
 ```{r, message=FALSE}
 # Import mz_axes df (including IS info)
-mz_df = read.csv(sprintf("%s/mz_axes.csv",out_path))
+mz_df = read.csv(sprintf("%s/mz_axes.csv",data_path))
 mz_df
 
 cal_matrix = as.matrix(spectra(cal_mix))
@@ -97,7 +97,7 @@ For each spot select the entire area, such that the amount of standard can be di
 
 ```{r, message=FALSE, fig.align='center', fig.show='hold', out.width="49%",out.height="49%"}
 # Set ROIs around calibration levels
-cal_roi_df = read.csv(sprintf("%s/cal_rois.csv",out_path))
+cal_roi_df = read.csv(sprintf("%s/cal_rois.csv",data_path))
 
 # Set cal levels
 #cal1 <- selectROI(cal_mix, mz = mz(cal_mix)[1], contrast.enhance="histogram")
@@ -152,7 +152,7 @@ Select ROI around the tissue of interest from the MSI dataset.
 
 
 ```{r, message=FALSE, fig.align='center', fig.show='hold', out.width="49%",out.height="49%"}
-tissue_pixel_df = read.csv(sprintf("%s/tissue_pixels.csv",out_path))
+tissue_pixel_df = read.csv(sprintf("%s/tissue_pixels.csv",data_path))
 
 image(tissue)
 
@@ -173,7 +173,7 @@ In the subset tissue, select ROIs relating to distinct spatial regions (e.g cell
 
 
 ```{r, message=FALSE, fig.align='center', fig.show='hold', out.width="49%",out.height="49%"}
-tissue_roi_df = read.csv(sprintf("%s/tissue_rois.csv",out_path))
+tissue_roi_df = read.csv(sprintf("%s/tissue_rois.csv",data_path))
 
 #tissue_roi1 <- selectROI(tissue, mz = mz(tissue)[2], contrast.enhance="histogram")
 tissue_roi1 = tissue_roi_df$tissue_roi1
@@ -279,7 +279,7 @@ pixel_count_calibration = response_per_pixel[[2]]
 Create a linear model for each m/z across all concentration spikes. The linear model will show intensity or response v concentration, where concentration is ng/pixel.
 ```{r, message=FALSE}
 # Read in calibration metadata
-cal_metadata = read.csv(sprintf("%s/calibration_metadata.csv",out_path)) %>%
+cal_metadata = read.csv(sprintf("%s/calibration_metadata.csv",data_path)) %>%
   mutate(pixel_count = sapply(sample,
                         function(sample_name) pixel_count_calibration[[sample_name]]),
          ng_per_pixel = amount_ng / pixel_count)
